# Melvin

./: .gitignore  README.md  config.py  melvin.py  memory_manager.py  pyproject.toml  requirements.txt  setup.sh  ssh_setup.sh
ai-os/: .gitignore  Makefile  bootstrap-host.sh  build.sh
ai-os/docs/: HARDENING.md  INSTALL.md  OPERATIONS.md  PERFORMANCE.md  TROUBLESHOOTING.md
ai-os/live-build/auto/: config
ai-os/live-build/config/hooks/live/: 010-base-tuning.chroot
ai-os/live-build/config/package-lists/: core.list.chroot
ai-os/modules/: build-module-ai-tools.sh  build-module-dev-tools.sh
ai-os/modules/manifests/: ai-tools.txt  dev-tools.txt
ai-os/scripts/: collect-debug.sh  install-post.sh  verify-system.sh
tests/: test_melvin.py  test_memory_manager.py
